# jacqline

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  NOTICE  README.md  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build-windows.yml  ci.yml  release.yml
docs/: THIRD_PARTY_LICENSES.md  architecture.md  mockup.html  mvp-plan.md
scripts/: setup-linux.sh  setup-macos.sh  setup-windows.ps1
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/conpty/: README.md
src-tauri/binaries/conpty/x64/: VERSION  checksums.txt
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_sessions.sql  003_claude_metadata.sql
src-tauri/src/: claude_watch.rs  cmd_util.rs  conpty_preload.rs  db.rs  debug.rs  error.rs  external.rs  lib.rs  main.rs  project.rs  project_fs.rs  pty.rs  session_env.rs  sessions.rs  setting.rs  shell.rs  updater.rs  wsl_shell.rs
src/components/: about-dialog.tsx  app-shell.tsx  code-view.tsx  customize-window.tsx  error-boundary.tsx  file-preview.tsx  file-tree.tsx  icons.tsx  inspector-resizer.tsx  inspector.tsx  jacqline-mark.tsx  main-pane.tsx  new-project-dialog.tsx  project-config-window.tsx  projects-sidebar.tsx  right-panel.tsx  session-dialog.tsx  settings-dialog.tsx  sidebar.tsx  statusbar.tsx  system-menu.tsx  terminal.tsx  title-bar.tsx  update-notice.tsx
tasks/: design-spec-phase-4-5-v2.md  design-spec-phase-4-5.md  lessons.md  todo.md
(+28 files in other folders)
